--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,30 @@
+astroid==2.4.2
+autopep8==1.5.3
 certifi==2020.4.5.2
 chardet==3.0.4
 click==7.1.2
+configparser==5.0.0
+flake8==3.8.3
 Flask==1.1.2
+Flask-SQLAlchemy==2.4.3
 idna==2.9
+importlib-metadata==1.6.1
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
 Pillow==7.1.2
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pylint==2.5.3
 requests==2.24.0
+six==1.15.0
+SQLAlchemy==1.3.17
+toml==0.10.1
+typed-ast==1.4.1
 urllib3==1.25.9
 Werkzeug==1.0.1
+wrapt==1.12.1
+zipp==3.1.0
